fixed y overflow potentially

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,5 +1,5 @@
 
-@media only screen and (min-width: 1080px){
+@media only screen and (min-width: 481px){
   .inner {
     width: 1200px;
     height: 700px;
@@ -91,8 +91,9 @@ ul {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100vh; 
-    width: 100vw;
+    height: 100%; 
+    width: 100%;
+    overflow-y: hidden;
     background: url('../../../assets/Landscape/RandomLandscape1.jpg');
     background-size: cover;
     overflow: hidden;
